# wasmi

./: .gitignore  Cargo.toml
.github/workflows/: contracts.yml  rust.yml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  trap.rs  untyped.rs  value.rs
crates/arena/src/: guarded.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  trap.rs  units.rs  value.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: bytes32.rs  hasher.rs  impls.rs  lib.rs  merkle.rs  traits.rs
crates/wasmi/: Cargo.toml
crates/wasmi/benches/: benches.rs
crates/wasmi/benches/bench/: mod.rs
crates/wasmi/src/: global.rs  instance.rs  lib.rs  linker.rs  store.rs  table.rs
crates/wasmi/src/engine/: cache.rs  code_map.rs  config.rs  executor.rs  inst_executor.rs  mod.rs  tests.rs  traits.rs
crates/wasmi/src/engine/bytecode/: utils.rs
crates/wasmi/src/engine/osp/: executor.rs  mod.rs
crates/wasmi/src/engine/stack/: frames.rs  mod.rs
crates/wasmi/src/engine/stack/values/: mod.rs  tests.rs  vref.rs
crates/wasmi/src/func/: mod.rs
crates/wasmi/src/memory/: byte_buffer.rs  mod.rs
crates/wasmi/src/merkle/: engine.rs  instance.rs  mod.rs  utils.rs
crates/wasmi/src/module/: import.rs
crates/wasmi/src/module/instantiate/: mod.rs  pre.rs
crates/wasmi/src/proof/: engine.rs  inst.rs  instance.rs  mod.rs  store.rs  utils.rs
crates/wasmi/src/snapshot/: engine.rs  instance.rs  mod.rs  store.rs
crates/wasmi/tests/: spec_shim.rs
crates/wasmi/tests/e2e/v1/: func.rs
crates/wasmi/tests/prover/: mod.rs
wasmi_v1/: Cargo.toml
wasmi_v1/src/: byte32.rs  global.rs  instance.rs  lib.rs  linker.rs  proof.rs  store.rs  table.rs
wasmi_v1/src/arena/: guarded.rs
wasmi_v1/src/engine/: accel_mod.rs  code_map.rs  executor.rs  mod.rs  one_step_executor.rs  proof.rs  state_hash.rs  traits.rs
wasmi_v1/src/engine/func_builder/: mod.rs
wasmi_v1/src/engine/stack/: frames.rs  mod.rs  values.rs
wasmi_v1/src/func/: mod.rs  typed_func.rs
wasmi_v1/src/memory/: byte_buffer.rs  mod.rs
wasmi_v1/src/module/: mod.rs
wasmi_v1/src/module/instantiate/: mod.rs  pre.rs
wasmi_v1/tests/: spec_shim.rs
wasmi_v1/tests/prover/: mod.rs
wasmi_v1/tests/spec/: context.rs  descriptor.rs
