[package]
name = "accel_merkle"
version = "0.1.0"
documentation = "https://docs.rs/wasmi_core"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.5", default-features = false }
digest = { version = "0.10.5", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "sha3/std",
    "digest/std",
]
