[package]
name = "wasmi"
version = "0.20.0"
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
exclude = ["tests/*", "benches/*"]
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
wasmparser = { version = "0.91", package = "wasmparser-nostd", default-features = false }
wasmi_core = { version = "0.5", path = "../core", default-features = false }
wasmi_arena = { version = "0.1", path = "../arena", default-features = false }
accel_merkle = { version = "0.1", path = "../merkle", default-features = false }
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
] }

[dev-dependencies]
wat = "1"
assert_matches = "1.5"
wast = "44.0"
anyhow = "1.0"
criterion = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "accel_merkle/std",
    "wasmi_core/std",
    "wasmi_arena/std",
    "wasmparser/std",
    "spin/std"
]

[[bench]]
name = "benches"
harness = false
